--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h1>Ajay K</h1>
     <h2>I'm a Web developer</h2>
     <hr/>
-    <h3><a href="/4.3 HTML Porfolio Project/public/movie-ranking.html"> Movie Ranking Project</a></h3>
-    <img src="/4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height="200" width="200"/>
-    <h3><a href="/4.3 HTML Porfolio Project/public/birthday-invite.html"> B'day Invite Project</a></h3>
-    <img src="/4.3 HTML Porfolio Project/assets/images/birthday-invite.png" height="200" width="200"/>
+    <h3><a href="./public/movie-ranking.html"> Movie Ranking Project</a></h3>
+    <img src="./assets/images/movie-ranking.png" height="200" width="200"/>
+    <h3><a href="./public/birthday-invite.html"> B'day Invite Project</a></h3>
+    <img src="./assets/images/birthday-invite.png" height="200" width="200"/>
     <hr/>
-    <h3><a href="/4.3 HTML Porfolio Project//public/about.html">About Me</a> <a href="/4.3 HTML Porfolio Project//public/contact.html">Contact ME</a></h3>
+    <h3><a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact ME</a></h3>
 </body>
 </html>
